# sentiment-analyzer

./: .gitignore  README.md  pyproject.toml
src/: i18n.py  language_dialog.py  main.py  main_window.py  result_display.py  sentiment_model.py
