[project]
name = "sentiment-analyzer"
version = "0.1.0"
description = "GUI tool for text sentiment analysis with PyQt6 and Transformers"
authors = [
    {name = "ExtroEd"}
]
license = {text = "GNU LESSER GENERAL PUBLIC LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.53.0,<5.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.14"
